--- a/Design1600/styles.css
+++ b/Design1600/styles.css
@@ -1,20 +1,86 @@
-/* global start */
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-/* :root {
-    --heading-font: 'Merriweather', Arial, Helvetica, sans-serif;
-    --paragraph-color: 'Inter', Arial, Helvetica, sans-serif;
-} */
+:root {
+    --main-color: #1B1A34
+}
+
+.rectangle {
+    position: absolute;
+    top: 393px;
+    right: 514px;
+    bottom: 491px;
+    left: 484px;
+    background-color: #D1D0F5;
+    border-radius: 30px;
+}
+
+body {
+    width: 1600px;
+    height: 1200px;
+    background-color: #F5F5FD;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    width: 582px;
+    height: 363px;
+    position: absolute;
+    left: 534px;
+    top: 443px;
+    right: 484px;
+    bottom: 394px;
+    background-color: white;
+    padding: 90px;
+    border-radius: 30px;
+}
 
 h2 {
-    font-family: 'Merriweather', Arial, Helvetica, sans-serif;;
+    font-family: 'Merriweather', Arial, Helvetica, sans-serif;
+    font-weight: 900;
+    font-size: 26px;
+    color: var(--main-color);
+}
+
+.result {
+    display: flex;
+    align-items: center;
+    gap: 16px;
 }
 
 p {
     font-family: 'Inter', Arial, Helvetica, sans-serif;
 }
-/* global end */
+
+.result > p {
+    font-weight: 900;
+    font-size: 28px;
+    color: var(--main-color);
+    padding: calc(42px - 8px) calc(27px - 8px) calc(42px - 8px) calc(27px - 8px);
+    border: 8px solid #D5D4F0;
+    border-radius: 50%;
+}
+
+.text {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.text p:first-of-type {
+    font-weight: 700;
+    font-size: 24px;
+    color: var(--main-color);
+}
+
+.text p:last-of-type {
+    font-weight: 500;
+    font-size: 18px;
+    color: var(--main-color);
+}
+
